--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <nav>Mini Project Suite</nav>
 
-    <div class="info">A collection of JavaScript-based mini projects designed to demonstrate proficiency in DOM manipulation, event handling, and interactive UI development</div>
+    <div class="info">A collection of React and vanilla JavaScript-based mini projects designed to demonstrate proficiency in React hooks, DOM manipulation, event handling, and interactive UI development</div>
 
     <div class="father">
 
